# control-gestion

./: .gitignore  LICENSE.txt  README.md  package-lock.json  plain.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/: copilot-instructions.md
backend/: README.md  __init__.py  alembic.ini  app.py  extensions.py  models.py  requirements.txt
backend/.vcode/: settings.json
backend/contras/: create.py  hash.py
backend/migrations/: env.py
backend/migrations/versions/: 2da32cb47c74_anadir_es_super_usuario_a_usuarios.py  9b7a93cf9ba9_renombrar_es_super_usurio_a_es_super_.py  d3939e956b0c_initial_migration.py
backend/routes/: __init__.py  captura_routes.py  directorio_externo.py  directorio_externo_routes.py  usuario_routes.py
backend/utils/: notificaciones.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/components/: CapturaForm.tsx
frontend/src/components/Layout/: AppBar.tsx  MainLayout.tsx  Sidebar.tsx  index.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/features/auth/: LoginModal.tsx  index.ts
frontend/src/features/capturas/: CapturaForm.tsx  CapturasList.tsx  index.ts
frontend/src/features/directorioExterno/: DirectorioExternoList.tsx  (+1 more)
frontend/src/pages/: Dashboard.tsx  Login.tsx  LoginStyles.css  TestAlertas.tsx  index.ts
frontend/src/routes/: AppRouter.tsx  ProtectedRoute.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/theme/: index.ts
frontend/src/types/: index.ts
(+2 files in other folders)
